fix #toggleLang overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "RSU";
-	padding-top: 70px;
+	padding-top: 40px;
 	color: #666;
 	-webkit-font-feature-settings: 'tnum';
     -moz-font-feature-settings: 'tnum';
@@ -8,7 +8,7 @@ body {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   /* Set the fixed height of the footer here */
